--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.jfrog.bintray" version "1.8.5"
+}
+
+
 allprojects {
     repositories {
         mavenLocal()
