--- a/codehead-test/build.gradle
+++ b/codehead-test/build.gradle
@@ -4,18 +4,131 @@
 
 apply plugin: 'java-library'
 apply plugin: 'idea'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
     appName = "codehead-test"
+    version = "0.9"
 }
 
 configurations {
     project.archivesBaseName = "${appName}"
     jar.baseName = "${appName}"
 }
+
+jar {
+    manifest.attributes["Implementation-Title"] = project.name
+    manifest.attributes["Implementation-Version"] = project.version
+    manifest.attributes["Automatic-Module-Name"] = project.name.replace('-', '.')  // for Jigsaw
+    manifest.attributes["Created-By"] =
+            "${System.getProperty("java.version")} (${System.getProperty("java.specification.vendor")})"
+
+    from(rootDir) {
+        include "README.md"
+        include "NOTICE.md"
+        include "LICENSE"
+        into "META-INF"
+        expand(copyright: new Date().format("yyyy"), version: project.version)
+    }
+}
+
+normalization {
+    runtimeClasspath {
+        ignore "META-INF/MANIFEST.MF"
+    }
+}
+
+javadoc {
+    description = "Generates project-level javadoc for use in -javadoc jar"
+
+    options.encoding = "UTF-8"
+    options.memberLevel = JavadocMemberLevel.PROTECTED
+    options.author = true
+    options.header = project.name
+    options.use = true
+    options.addStringOption("Xdoclint:none", "-quiet")
+
+    // Suppress warnings due to cross-module @see and @link references.
+    // Note that global 'api' task does display all warnings.
+    logging.captureStandardError LogLevel.INFO
+    logging.captureStandardOutput LogLevel.INFO  // suppress "## warnings" message
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    archiveClassifier.set("sources")
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar) {
+    archiveClassifier.set("javadoc")
+    from javadoc
+}
+// Create the pom configuration:
+def pomConfig = {
+    licenses {
+        license {
+            name "The Apache Software License, Version 2.0"
+            url "http://www.apache.org/licenses/LICENSE-2.0.txt"
+            distribution "repo"
+        }
+    }
+    developers {
+        developer {
+            id "wolpert"
+            name "Ned Wolpert"
+            email "ned.wolpert@codeheadsystems.com"
+        }
+    }
+
+    scm {
+        url "https://github.com/wolpert/terrapin"
+    }
+}
+
+
+// Create the publication with the pom configuration:
+publishing {
+    publications {
+        CodeHeadTestPublication(MavenPublication) {
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+            groupId 'com.codeheadsystems.terrapin'
+            artifactId project.ext.appName
+            version project.ext.version
+            pom.withXml {
+                def projectNode = asNode()
+                // Append POM configuration.
+                projectNode.children().last() + pomConfig
+            }
+        }
+    }
+}
+
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_KEY')
+    publications = ['CodeHeadTestPublication']
+    dryRun = false //[Default: false] Whether to run this as dry-run, without deploying
+    publish = false //[Default: false] Whether version should be auto published after an upload
+    override = true //[Default: false] Whether to override version artifacts already published
+    pkg {
+        repo = 'com.codeheadsystems.terrapin'
+        name = project.ext.appName
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/wolpert/terrapin/tree/main/codehead-test'
+        version {
+            name = project.ext.version
+            released = new Date()
+        }
+    }
+}
+
 test {
     useJUnitPlatform() // needed for junit5
 }
