--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ plugins {
     id "com.jfrog.bintray" version "1.8.5"
 }
 
+apply plugin: 'java-library'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+
+// gradle :<project>:bintrayUpload
 
 allprojects {
     repositories {
@@ -33,6 +38,54 @@ allprojects {
         google()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+    }
+
+    jar {
+        manifest.attributes["Implementation-Title"] = project.name
+        manifest.attributes["Implementation-Version"] = project.version
+        manifest.attributes["Automatic-Module-Name"] = project.name.replace('-', '.')  // for Jigsaw
+        manifest.attributes["Created-By"] =
+                "${System.getProperty("java.version")} (${System.getProperty("java.specification.vendor")})"
+
+        from(rootDir) {
+            include "README.md"
+            include "NOTICE.md"
+            include "LICENSE"
+            into "META-INF"
+            expand(copyright: new Date().format("yyyy"), version: project.version)
+        }
+    }
+
+    normalization {
+        runtimeClasspath {
+            ignore "META-INF/MANIFEST.MF"
+        }
+    }
+
+    javadoc {
+        description = "Generates project-level javadoc for use in -javadoc jar"
+
+        options.encoding = "UTF-8"
+        options.memberLevel = JavadocMemberLevel.PROTECTED
+        options.author = true
+        options.header = project.name
+        options.use = true
+        options.addStringOption("Xdoclint:none", "-quiet")
+
+        // Suppress warnings due to cross-module @see and @link references.
+        // Note that global 'api' task does display all warnings.
+        logging.captureStandardError LogLevel.INFO
+        logging.captureStandardOutput LogLevel.INFO  // suppress "## warnings" message
+    }
+
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        archiveClassifier.set("sources")
+        from sourceSets.main.allSource
+    }
+
+    task javadocJar(type: Jar) {
+        archiveClassifier.set("javadoc")
+        from javadoc
     }
 }
 
