--- a/statemachine/build.gradle
+++ b/statemachine/build.gradle
@@ -14,7 +14,7 @@ targetCompatibility = 1.8
 
 ext {
     appName = "statemachine"
-    version = "0.9"
+    version = "0.9.1"
 }
 
 configurations {
@@ -88,9 +88,17 @@ test {
 }
 jacocoTestReport {
     reports {
-        xml.enabled false
+        xml.enabled true
         csv.enabled false
         html.destination file("${buildDir}/jacocoHtml")
+    }
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    '**/*_Factory.class',
+                    '**/*_Factory**.class'
+            ])
+        }))
     }
 }
 
