Got a base test case working, needs expansion.
The test now does work. Note the following:
1. The ResolverFactory has gotten too weird. Either replace it with good dagger setup, or make it stable.
2. The tests need to be able easily add new DAO examples. Right now it is just hard-coded to dynamodb.

--- a/oop-mock-tests/build.gradle
+++ b/oop-mock-tests/build.gradle
@@ -10,6 +10,7 @@ ext {
 configurations {
     project.archivesBaseName = "${appName}"
     jar.baseName = "${appName}"
+    dynamodb
 }
 
 jacocoTestReport.finalizedBy jacocoTestCoverageVerification
@@ -40,6 +41,9 @@ dependencies {
     implementation project(":oop-mock-client")
     implementation project(":oop-mock")
     implementation project(":oop-mock-dynamodb")
+    dynamodb fileTree (dir: 'lib', include: ["*.dylib", "*.so", "*.dll"])
+    dynamodb "com.amazonaws:DynamoDBLocal:${awsLocalDDB}"
+    implementation "com.amazonaws:DynamoDBLocal:${awsLocalDDB}"
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation("com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}")
     implementation("com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}")
