--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,4 @@
  */
 
 include 'codehead-test', 'statemachine',
-    ':oop-mock', ':oop-mock-common', ':oop-mock-client', ':oop-mock-dynamodb', ':oop-mock-tests'
+    ':oop-mock-common', ':oop-mock-client', ':oop-mock', ':oop-mock-dynamodb', ':oop-mock-tests'
