Moved in my metrics wrapper lib to prepare for adding key service.
Before I can bring in the next set of code I have to add in the
metrics wrapper I built. The wrapper was designed so I can switch
to prometheus from drop-wizard metrics easily enough. Of course,
it turns out that wasn't so easy in the end so I'm going to have
to rebuild my prometheus client. But this atleast gets it working.

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@
  * Copyright (c) 2020 CodeHead Systems. All rights reserved
  */
 
-include 'codehead-test', ':datastore-test', 'statemachine',
-    ':oop-mock-common', ':oop-mock-client', ':oop-mock', ':oop-mock-dynamodb', ':oop-mock-tests'
+include 'codehead-test', 'datastore-test', 'statemachine',
+        'metrics', 'metrics-test', 'metrics-drop-impl',
+        'oop-mock-common', 'oop-mock-client', 'oop-mock', 'oop-mock-dynamodb', 'oop-mock-tests'
