--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ allprojects {
     apply plugin: "java-library"
     apply plugin: "eclipse"
     apply plugin: 'jacoco'
+    java {
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
+    }
     repositories {
         mavenLocal()
         mavenCentral()
