--- a/metrics-test/build.gradle
+++ b/metrics-test/build.gradle
@@ -14,7 +14,7 @@ configurations {
     jar.baseName = "${appName}"
 }
 
-jacocoTestReport.finalizedBy jacocoTestCoverageVerification
+//jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 // Create the pom configuration:
 def pomConfig = {
@@ -39,6 +39,7 @@ def pomConfig = {
 }
 
 dependencies {
+    implementation project(":metrics")
     implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     implementation("org.junit.jupiter:junit-jupiter-api:${jupiterVersion}")
