--- a/metrics/build.gradle
+++ b/metrics/build.gradle
@@ -41,6 +41,7 @@ def pomConfig = {
 dependencies {
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
+    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     testImplementation("org.junit.jupiter:junit-jupiter-api:${jupiterVersion}")
     testImplementation("org.assertj:assertj-core:${assertjVersion}")
     testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
