--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,7 @@ ext {
     log4jVersion = '2.18.0' //  https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
     logbackVersion = '1.2.11' // https://mvnrepository.com/artifact/ch.qos.logback/logback-core
     metricsVersion = '4.2.10' // https://mvnrepository.com/artifact/io.dropwizard.metrics/metrics-core
+    micrometerVersion = '1.9.1' // https://mvnrepository.com/artifact/io.micrometer/micrometer-core
     mockitoVersion = '4.6.1' // https://mvnrepository.com/artifact/org.mockito/mockito-core
     openfeign = '11.9' // https://mvnrepository.com/artifact/io.github.openfeign/feign-core
     resilience4jVersion = '1.7.1' // https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-retry
