--- a/keyservice-dao-ddb/build.gradle
+++ b/keyservice-dao-ddb/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}"
     implementation "io.github.resilience4j:resilience4j-retry:${resilience4jVersion}"
+    implementation "io.micrometer:micrometer-core:${micrometerVersion}"
 
     implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
@@ -43,6 +44,7 @@ dependencies {
     testImplementation project(":codehead-test")
     testImplementation project(":datastore-test")
     testImplementation project(":keyservice-dao-test")
+    testImplementation project(":metrics-test")
     testImplementation("org.assertj:assertj-core:${assertjVersion}")
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
