--- a/metrics/build.gradle
+++ b/metrics/build.gradle
@@ -39,6 +39,7 @@ def pomConfig = {
 }
 
 dependencies {
+    implementation "io.micrometer:micrometer-core:${micrometerVersion}"
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
