Started doing the first batch request.
This required a series of refactorings and I noticed I forgot to add in how to get new batches.
1. Search for keys from owner records is now a thing.
2. Got the batch serialization needed for tokens. However, the object mapper needs help here. The module
   is hacked in due to AttributeValue not a thing in keyservice-common. I'll work on that.
3. Added a sample dao component that uses dagger with the tests.

--- a/keyservice-dao-ddb/build.gradle
+++ b/keyservice-dao-ddb/build.gradle
@@ -36,12 +36,14 @@ dependencies {
     implementation "io.micrometer:micrometer-core:${micrometerVersion}"
     implementation "io.github.resilience4j:resilience4j-micrometer:${resilience4jVersion}"
 
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-
     compileOnly "org.immutables:value:${immutablesVersion}"
     annotationProcessor "org.immutables:value:${immutablesVersion}"
 
+    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
+    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
+
+    testAnnotationProcessor "org.immutables:value:${immutablesVersion}"
+    testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     testImplementation project(":codehead-test")
     testImplementation project(":datastore-test")
     testImplementation project(":keyservice-dao-test")
