--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,7 @@ ext {
     cassandraDriverVersion = '4.14.1' //  https://mvnrepository.com/artifact/com.datastax.oss/java-driver-core
     cassandraUnitVersion = '4.3.1.0' // https://mvnrepository.com/artifact/org.cassandraunit/cassandra-unit
     commonsIoVersion = '2.11.0' // https://mvnrepository.com/artifact/commons-io/commons-io
+    commonsLangVersion = '3.12.0' // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     daggerVersion = '2.42' // https://mvnrepository.com/artifact/com.google.dagger/dagger
     dropwizardVersion = '2.1.1' // https://mvnrepository.com/artifact/io.dropwizard/dropwizard-core
     gdxVersion = '1.11.0' // https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx
