--- a/keystore-common/build.gradle
+++ b/keystore-common/build.gradle
@@ -7,54 +7,37 @@ apply plugin: 'java-library'
 apply plugin: 'idea'
 
 ext {
-    appName = "keyservice-dao-ddb"
+    appName = "keystore-common"
 }
 
 configurations {
     project.archivesBaseName = "${appName}"
     jar.baseName = "${appName}"
-    dynamodb
 }
 
-//jacocoTestReport.finalizedBy jacocoTestCoverageVerification
+jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 dependencies {
-    // DynamoDB testing
-    dynamodb "com.amazonaws:DynamoDBLocal:${awsLocalDDB}"
-
-    implementation project(":keyservice-dao")
-    implementation project(":keyservice-common")
-    implementation project(":metrics")
-
-    implementation "software.amazon.awssdk:dynamodb:${awsSDK2}"
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+
     implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
     implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}"
-    implementation "io.github.resilience4j:resilience4j-retry:${resilience4jVersion}"
-    implementation "io.micrometer:micrometer-core:${micrometerVersion}"
-    implementation "io.github.resilience4j:resilience4j-micrometer:${resilience4jVersion}"
-
-    compileOnly "org.immutables:value:${immutablesVersion}"
-    annotationProcessor "org.immutables:value:${immutablesVersion}"
+    implementation "org.bouncycastle:bcprov-jdk15on:${bouncyVersion}"
 
     implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
 
-    testAnnotationProcessor "org.immutables:value:${immutablesVersion}"
-    testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
+    compileOnly "org.immutables:value:${immutablesVersion}"
+    annotationProcessor "org.immutables:value:${immutablesVersion}"
+
     testImplementation project(":codehead-test")
-    testImplementation project(":datastore-test")
-    testImplementation project(":keyservice-dao-test")
-    testImplementation project(":metrics-test")
     testImplementation("org.assertj:assertj-core:${assertjVersion}")
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
     testImplementation "org.mockito:mockito-core:${mockitoVersion}"
     testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
-    testImplementation("ch.qos.logback:logback-classic:${logbackVersion}")
-    testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
 }
 
