--- a/keystore-service/build.gradle
+++ b/keystore-service/build.gradle
@@ -3,11 +3,13 @@
  * Ned Wolpert <ned.wolpert@codeheadsystems.com>
  */
 
-apply plugin: 'java-library'
+apply plugin: 'application'
+apply plugin: 'java'
 apply plugin: 'idea'
 
 ext {
     appName = "keystore-service"
+    configPath = "${rootProject.projectDir}/keystore-service/src/main/resources/"
 }
 
 configurations {
@@ -62,3 +64,7 @@ dependencies {
     testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
 }
 
+run {
+    args 'server', configPath + 'config.yaml'
+    mainClassName = "com.codeheadsystems.terrapin.service.Server"
+}
