--- a/keystore-service/src/main/resources/dev-config.yaml
+++ b/keystore-service/src/main/resources/dev-config.yaml
@@ -1,9 +1,8 @@
 
-
 logging:
   level: INFO
   loggers:
-    com.codeheadsystems: INFO
+    com.codeheadsystems: DEBUG
     software.amazon: INFO
   appenders:
     - type: console
